Try to fix extra space on right side of mobile layout

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #692CD1;
   color: #FFF;
+  max-width: 1vw;
 }
 
 code {
